[workspace]
resolver = "3"
members = [
    "object-store-fjall"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
fjall = {version = "2.8.0", default-features = false, features = ["bytes", "ssi_tx"] }
futures = "0.3.31"
object_store = { version = "0.13", default-features = false }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", default-features = false }
uuid = { version = "1.16.0", default-features = false, features = ["std", "v7", "serde"] }
