[workspace]
resolver = "3"
members = [
    "object-store-disktest",
    "object-store-fjall",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1.0.97"
assert_cmd = "2.1.1"
async-trait = "0.1.88"
bytes = "1.10.1"
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
dir-size = "0.1.1"
fjall = {version = "2.8.0", default-features = false, features = ["bytes", "ssi_tx"] }
futures = "0.3.31"
indicatif = "0.17.11"
mimalloc = "0.1.44"
object_store = { version = "0.13", default-features = false }
postcard = { version = "1.1.3", features = ["use-std"] }
predicates = "3.1.3"
rand = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.1", default-features = false }
uuid = { version = "1.16.0", default-features = false, features = ["std", "v7", "serde"] }

[profile.bench]
debug = true
