[package]
name = "object-store-disktest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
dir-size.workspace = true
futures.workspace = true
indicatif.workspace = true
mimalloc.workspace = true
object-store-fjall = { path = "../object-store-fjall" }
object_store = { workspace = true, features = ["fs"] }
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
