[package]
name = "object-store-fjall"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
fjall.workspace = true
futures.workspace = true
object_store.workspace = true
postcard.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
object_store = { workspace = true, features = ["integration"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
